--- a/styles/blocks/_comment.less
+++ b/styles/blocks/_comment.less
@@ -12,6 +12,13 @@
       padding: 38px 0 0 0;
    }
 
+   @media (max-width: 790px) {
+      padding: 25px 0 0 0;
+      font-size: 14px;
+      max-width: 345px;
+      line-height: 28px;
+   }
+
    &-author {
       padding: 40px 0 0 0;
       font-size: 18px;
@@ -22,5 +29,9 @@
       @media (max-width: 1027px) {
          padding: 10px 0 12px 0;
       }
+
+
    }
+
+   &-qoute {}
 }
