--- a/styles/blocks/_story.less
+++ b/styles/blocks/_story.less
@@ -30,7 +30,14 @@
       @media (max-width: 1027px) {
          padding-bottom: 20px;
       }
+
+      @media (max-width: 370px) {
+         font-size: 38px;
+         line-height: 10px;
+         padding-bottom: 20px;
+      }
    }
+
 
    &__description-text {
       font-size: 18px;
@@ -51,6 +58,13 @@
 
       @media (max-width: 1027px) {
          margin-top: 30px;
+      }
+
+      @media (max-width: 370px) {
+         margin-top: 17px;
+         width: 254px;
+         height: 56px;
+         font-size: 17px;
       }
 
       &:after {
@@ -75,6 +89,11 @@
          position: relative;
          margin: 50px 0 0 0;
          padding-bottom: 30px;
+      }
+
+      @media (max-width: 370px) {
+         margin: 20px 0 0 0;
+         padding-bottom: 19px;
       }
 
       &:before {
@@ -105,6 +124,11 @@
          @media (max-width: 1027px) {
             display: none;
          }
+      }
+
+
+      .story__image {
+         width: 100%;
       }
    }
 }
