--- a/styles/main.less
+++ b/styles/main.less
@@ -21,4 +21,5 @@
 @import './blocks/_footer.less';
 @import './blocks/_information.less';
 @import './blocks/_payment.less';
+@import './blocks/_subscription.less';
 @import './blocks/_hug.less';
