--- a/styles/blocks/_hug.less
+++ b/styles/blocks/_hug.less
@@ -22,12 +22,33 @@
       position: absolute;
       bottom: 0;
       right: 87px;
+
+      @media(max-width:520px) {
+         display: none;
+      }
    }
 
    &__arrow {
       position: fixed;
       bottom: 15px;
       right: 18px;
+
+      @media(max-width:790px) {
+         bottom: 13px;
+         right: 35px;
+      }
+
+      @media(max-width:520px) {
+         right: 42px;
+      }
+
+      @media(max-width:495px) {
+         right: 53px;
+      }
+
+      @media(max-width:465px) {
+         right: 70px;
+      }
    }
 
    &__arrow-link {
@@ -35,6 +56,11 @@
       width: 50px;
       height: 50px;
       display: block;
+
+      @media(max-width:790px) {
+         width: 41px;
+         height: 45px;
+      }
    }
 
    &__arrow-img {
