--- a/styles/blocks/_products.less
+++ b/styles/blocks/_products.less
@@ -56,10 +56,20 @@
       @media (max-width: 1027px) {
          padding: 40px 0 0 0;
       }
+
+      @media (max-width: 660px) {
+         padding: 40px 0 0 0;
+         font-size: 18px;
+      }
    }
 
    &__item-mesure {
       padding: 20px 0 0 0;
+
+      @media (max-width: 660px) {
+         padding: 11px 0 0 0;
+         font-size: 16px;
+      }
    }
 
    &__item-btn {
@@ -85,10 +95,22 @@
          position: absolute;
          top: 20px;
          right: 7px;
+
+         @media (max-width: 670px) {
+            top: 14px;
+            right: 4px;
+         }
       }
 
       @media (max-width: 1027px) {
          margin: 40px 0 40px 0;
+      }
+
+      @media (max-width: 670px) {
+         margin: 30px 0 26px 0;
+         width: 200px;
+         height: 46px;
+         font-size: 17px;
       }
    }
 }
