--- a/styles/blocks/_testimonials.less
+++ b/styles/blocks/_testimonials.less
@@ -15,6 +15,16 @@
          font-size: 43px;
          line-height: 0px;
       }
+
+      @media (max-width: 790px) {
+         padding-top: 40px;
+         font-size: 30px;
+      }
+
+      @media (max-width: 340px) {
+         padding-top: 30px;
+         font-size: 25px;
+      }
    }
 
    .testimonials__title-word {
@@ -22,7 +32,15 @@
       color: #f2612d;
 
       @media (max-width: 1027px) {
-         font-size: 50px;
+         font-size: 43px;
+      }
+
+      @media (max-width: 340px) {
+         font-size: 25px;
+      }
+
+      @media (max-width: 790px) {
+         font-size: 30px;
       }
    }
 
@@ -30,12 +48,31 @@
       position: relative;
       padding: 0px 60px;
       min-width: 0;
+
+      @media (max-width: 790px) {
+         padding: 0px 30px;
+      }
+
+      @media (max-width: 530px) {
+         padding: 0px 20px;
+      }
+
+      @media (max-width: 430px) {
+         padding: 0px 10px;
+      }
+
    }
 
    .testimonials__image {
       display: inline-block;
       position: relative;
       z-index: 21;
-      width: 100%;
+      width: 220px;
+      height: 218px;
+
+      @media (max-width: 530px) {
+         width: 220px;
+         height: 218px;
+      }
    }
 }
