animation in the project

--- a/styles/blocks/_instagram.less
+++ b/styles/blocks/_instagram.less
@@ -11,6 +11,7 @@
       position: relative;
       font-family: 'Muli-ExtraBold';
       margin-bottom: 45px;
+      transition: all 0.3s;
    }
 
    &__user-logo::before {
