--- a/styles/blocks/_btn.less
+++ b/styles/blocks/_btn.less
@@ -10,6 +10,7 @@
    -moz-border-radius: 40px;
    -ms-border-radius: 40px;
    -o-border-radius: 40px;
+   transition-duration: 0.3s;
 }
 
 .btn:hover {
