--- a/styles/blocks/_hug.less
+++ b/styles/blocks/_hug.less
@@ -52,10 +52,15 @@
    }
 
    &__arrow-link {
-      background-color: rgb(242, 102, 47);
+      background-color: #16866d;
       width: 50px;
       height: 50px;
       display: block;
+      transition: all 0.3s;
+
+      &:hover {
+         background-color: rgb(242, 102, 47);
+      }
 
       @media(max-width:790px) {
          width: 41px;
