--- a/styles/blocks/_blog.less
+++ b/styles/blocks/_blog.less
@@ -4,7 +4,7 @@
    text-align: left;
    margin: 0 auto;
 
-   @media (max-width: 1027px) {
+   @media (max-width: 1270px) {
       text-align: center;
    }
 
@@ -14,7 +14,7 @@
       font-family: 'Muli-ExtraBold';
       padding: 99px 0 45px 0;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1270px) {
          padding: 20px 0 10px 0;
          font-size: 40px;
       }
@@ -31,7 +31,11 @@
       align-items: center;
       margin-bottom: 202px;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1620px) {
+         margin-bottom: 40px;
+      }
+
+      @media (max-width: 1270px) {
          flex-direction: column-reverse;
          position: relative;
          max-width: 1200px;
@@ -49,7 +53,7 @@
       text-align: left;
       margin-left: 61px;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1270px) {
          margin-left: 0;
       }
 
@@ -64,7 +68,7 @@
       margin: 132px 0 20px 0px;
       font-family: 'Muli-ExtraBold';
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1270px) {
          margin: 40px 0 14px 0px;
          font-size: 27px;
       }
@@ -84,7 +88,7 @@
          height: 13px;
          background-color: #f7ae3b;
 
-         @media (max-width: 1027px) {
+         @media (max-width: 1270px) {
             display: none;
          }
       }
