--- a/styles/blocks/_fonts.less
+++ b/styles/blocks/_fonts.less
@@ -1,10 +1,8 @@
 // main: ./../main.less
 @font-face {
-   font-family: 'Muli-Bold';
-   src: url('../assets/fonts/Muli-Bold.eot');
-   src: local('☺'), url('../assets/fonts/Muli-Bold.woff') format('woff'), url('../assets/fonts/Muli-Bold.ttf') format('truetype'), url('../assets/fonts/Muli-Bold.svg') format('svg');
+   font-family: 'Muli';
+   src: url('../assets/fonts/Muli-Bold.woff') format('woff');
    font-weight: 700;
-   font-style: normal;
 }
 
 @font-face {
@@ -12,13 +10,11 @@
    src: url('../assets/fonts/Muli-ExtraBold.eot');
    src: local('☺'), url('../assets/fonts/Muli-ExtraBold.woff') format('woff'), url('../assets/fonts/Muli-ExtraBold.ttf') format('truetype'), url('../assets/fonts/Muli-ExtraBold.svg') format('svg');
    font-weight: 800;
-   font-style: normal;
 }
 
 @font-face {
-   font-family: 'Muli-Regular';
+   font-family: 'Muli';
    src: url('../assets/fonts/Muli-Regular.eot');
    src: local('☺'), url('../assets/fonts/Muli-Regular.woff') format('woff'), url('../assets/fonts/Muli-Regular.ttf') format('truetype'), url('../assets/fonts/Muli-Regular.svg') format('svg');
    font-weight: 400;
-   font-style: normal;
 }
