--- a/styles/blocks/_footer.less
+++ b/styles/blocks/_footer.less
@@ -24,7 +24,7 @@
    .footer-logo {
       width: 207px;
       height: 68px;
-      padding-top: 54px;
+      align-self: center;
 
       @media(max-width:1027px) {
          display: none;
@@ -44,6 +44,11 @@
 
       @media(max-width:520px) {
          margin: 12px 0 0 94px;
+      }
+
+      @media(max-width:420px) {
+         margin: 10px auto;
+
       }
    }
 
