--- a/styles/blocks/_payment.less
+++ b/styles/blocks/_payment.less
@@ -3,7 +3,7 @@
    max-width: 236px;
 
    @media(max-width:470px) {
-      margin: 10px 0 0 113px;
+      margin: 0 auto;
    }
 
    .payment__title {
@@ -24,6 +24,7 @@
       display: flex;
       flex-wrap: wrap;
       margin: 0 0 0 0;
+      align-items: flex-start;
 
       @media(max-width:1027px) {
          display: flex;
