--- a/styles/blocks/_slider.less
+++ b/styles/blocks/_slider.less
@@ -33,7 +33,7 @@
 
    .slick-arrow.slick-prev {
 
-      left: 48%;
+      left: 45%;
       background: url('/assets/images/testimonials/arrow-left .png') 0 0 / 100% no-repeat;
 
       @media (max-width: 1027px) {
@@ -51,10 +51,14 @@
       @media (max-width: 490px) {
          left: 36%;
       }
+
+      @media (max-width: 380px) {
+         left: 34%;
+      }
    }
 
    .slick-arrow.slick-next {
-      right: 48%;
+      right: 45%;
       background: url('/assets/images/testimonials/arrow-right .png') 0 0 / 100% no-repeat;
 
       @media (max-width: 1027px) {
@@ -71,6 +75,10 @@
 
       @media (max-width: 490px) {
          right: 36%;
+      }
+
+      @media (max-width: 380px) {
+         right: 34%;
       }
    }
 
