--- a/styles/main.less
+++ b/styles/main.less
@@ -1,5 +1,14 @@
 // out: ./main.min.css, compress: false, sourceMap: true
 
+body.lock {
+   overflow: hidden;
+}
+
+
+
+
+
+
 @import './blocks/_fonts.less';
 @import './blocks/_conteiner.less';
 @import './blocks/_btn.less';
