--- a/styles/blocks/_header.less
+++ b/styles/blocks/_header.less
@@ -18,10 +18,7 @@
       align-items: center;
    }
 
-   &__right {
-      display: flex;
-      align-items: center;
-   }
+
 
    .logo {
       position: absolute;
@@ -73,7 +70,7 @@
    }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1300px) {
    .header__body {
       padding: 30px 0 0 0;
    }
@@ -81,10 +78,10 @@
    .header__novigation {
       flex-direction: column-reverse;
       position: fixed;
-      top: -100%;
-      left: 0;
+      top: 0;
+      left: -100%;
       width: 100%;
-      height: 100vh;
+      height: 150vh;
       background-color: #6c2c1c;
       transition: all 0.3s ease 0s;
       -webkit-transition: all 0.3s ease 0s;
@@ -92,18 +89,19 @@
       -ms-transition: all 0.3s ease 0s;
       -o-transition: all 0.3s ease 0s;
       z-index: 10;
+      overflow: auto;
    }
 
    .header__novigation.active {
-      top: 0;
+      left: 0;
    }
 
    .header__right {
-      padding-top: 40px;
+      padding-top: 200px;
    }
 
    .header__left {
-      padding-bottom: 178px;
+      padding-bottom: 320px;
    }
 
    .logo {
@@ -123,8 +121,21 @@
    }
 
    .header__shop {
-      top: 530px;
+      top: 350px;
    }
+
+}
+
+.header__right {
+   display: flex;
+   align-items: center;
+   text-align: center;
+
+   @media (max-width: 560px) {
+      flex-direction: column;
+      padding-top: 65px;
+   }
+
 }
 
 @media (max-width:530px) {
