--- a/styles/blocks/_hug.less
+++ b/styles/blocks/_hug.less
@@ -49,6 +49,10 @@
       @media(max-width:465px) {
          right: 70px;
       }
+
+      @media(max-width:430px) {
+         right: 44px;
+      }
    }
 
    &__arrow-link {
@@ -66,6 +70,8 @@
          width: 41px;
          height: 45px;
       }
+
+
    }
 
    &__arrow-img {
