--- a/styles/blocks/_instagram.less
+++ b/styles/blocks/_instagram.less
@@ -26,13 +26,15 @@
 
    &__image-items {
       display: flex;
-      margin: 45px 0 0 0;
+      display: flex;
+      margin: 45px auto 0 auto;
+      max-width: 1542px;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1620px) {
          display: flex;
          flex-wrap: wrap;
-         margin: 20px 0 0 0;
-         justify-content: center;
+         max-width: 775px;
+
       }
    }
 
@@ -43,9 +45,14 @@
       position: relative;
       z-index: -10;
 
-      @media (max-width: 1027px) {
-         flex: 0 1 50%;
+      @media (max-width: 1620px) {
+         flex: 1 1 50%;
       }
+
+      @media (max-width: 767px) {
+         flex: 0 1 100%;
+      }
+
 
       &::after {
          content: "  ";
@@ -63,5 +70,6 @@
       position: relative;
       z-index: -10;
       display: inline-block;
+      max-width: 100%;
    }
 }
