--- a/styles/blocks/_personal.less
+++ b/styles/blocks/_personal.less
@@ -1,6 +1,7 @@
 // main: ./../main.less
 .personal {
    position: relative;
+
    &::after {
       content: " ";
       width: 47px;
@@ -9,20 +10,24 @@
       position: absolute;
       top: 12px;
       right: 41px;
-      @media (max-width: 1024px){
+
+      @media (max-width: 1024px) {
          display: none;
       }
    }
+
    &__list {
       display: flex;
    }
-   
+
    &__list-item {
       margin: 0 45px 0 0;
    }
+
    &__list-item--numb {
       margin-right: 136px;
       position: relative;
+
       &::after {
          content: "0";
          width: 18px;
@@ -38,8 +43,13 @@
          -o-border-radius: 50%;
          text-align: center;
       }
-      @media (max-width: 1024px){
+
+      @media (max-width: 1024px) {
          margin-right: 100px;
+      }
+
+      @media (max-width: 560px) {
+         margin-right: 0;
       }
    }
 
