--- a/styles/blocks/_story.less
+++ b/styles/blocks/_story.less
@@ -1,12 +1,24 @@
 // main: ./../main.less
 .story {
+   max-width: 1302px;
+   margin: 0 auto;
+   padding: 120px 0 160px 0;
+
+   @media (max-width: 1260px) {
+      padding: 40px 0 20px 0;
+   }
+
+   @media (max-width: 767px) {
+      padding: 40px 0 108px 0;
+   }
+
    &__body {
       display: flex;
       align-items: center;
       justify-content: space-between;
       text-align: center;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1260px) {
          flex-direction: column;
          align-items: center;
       }
@@ -15,7 +27,7 @@
    &__description {
       padding: 140px 170px 0 0px;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1260px) {
          padding: 28px 0 0 0;
       }
    }
@@ -83,12 +95,23 @@
       position: relative;
       margin: 125px 0 0 0;
       padding-bottom: 160px;
-      width: 100%;
+      width: 585px;
+      height: 601px;
 
-      @media (max-width: 1027px) {
+      @media (max-width: 1260px) {
          position: relative;
          margin: 50px 0 0 0;
          padding-bottom: 30px;
+      }
+
+      @media (max-width: 767px) {
+         width: 400px;
+         height: 340px;
+      }
+
+      @media (max-width: 450px) {
+         width: 300px;
+         height: 250px;
       }
 
       @media (max-width: 370px) {
@@ -106,6 +129,8 @@
          top: 30px;
          left: -145px;
 
+
+
          @media (max-width: 1027px) {
             display: none;
          }
@@ -121,9 +146,10 @@
          bottom: -195px;
          right: -208px;
 
-         @media (max-width: 1027px) {
+         @media (max-width: 2230px) {
             display: none;
          }
+
       }
 
 
