--- a/styles/blocks/_menu.less
+++ b/styles/blocks/_menu.less
@@ -8,6 +8,8 @@
          text-align: center;
          overflow: auto;
       }
+
+
    }
 
    &__list-item {
@@ -28,5 +30,11 @@
       @media (max-width: 1024px) {
          font-size: 20px;
       }
+   }
+}
+
+@media (max-width: 560px) {
+   .menu__list {
+      padding-top: 20px;
    }
 }
